feat: 连接数据库的汇总案例